# xiaozhi-esp32-2025-03-18

./: .gitignore
components/volc_engine_rtc/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  application.cc
main/boards/common/: wifi_board.cc
main/protocols/: protocol.h  vertc_protocol.cc  vertc_protocol.h
